# Telos

./: .gitignore  AGENTS.md  Cargo.toml  E2E_TEST_REPORT.md  SOUL.md  Telos_Tech_Design.md  USAGE.md  analyze_traces.py  bing_test.rs  clean_memory_bleed.py  fix_cargo.py  fix_duplicate.py  fix_duplicate2.py  fix_duplicate3.py  fix_native.py  fix_tests.py  fix_tests2.py  fix_tests3.py  install.sh  parse_traces.py  patch.py  patch3.py  patch_cli_json.py  patch_daemon.py  patch_daemon.sh  run_case_23_28.py  run_eval_case_23.py  run_eval_failed.py  run_eval_headless.py  run_eval_memory.py  run_iteration_7_tests.sh  run_remaining_tests.sh  run_tests.sh  trigger_borrow_error.py
.agents/workflows/: agent_evaluation_workflow.md  e2e_project_delivery_workflow.md
.claude/: settings.local.json
crates/telos_bot/: Cargo.toml
crates/telos_bot/src/: lib.rs  markdown_renderer.rs  traits.rs
crates/telos_bot/src/providers/: telegram.rs
crates/telos_cli/: Cargo.toml
crates/telos_cli/src/: main.rs  tui.rs
crates/telos_context/: Cargo.toml
crates/telos_context/src/: ast_parser.rs  clustering.rs  lib.rs  providers.rs  raptor.rs
crates/telos_core/: Cargo.toml
crates/telos_core/src/: agent_traits.rs  config.rs  lib.rs  meta_graph.rs  metrics.rs  project.rs  schedule.rs
crates/telos_daemon/: Cargo.toml
crates/telos_daemon/src/: main.rs  tool_generator.rs
crates/telos_daemon/src/agents/: architect.rs  coder.rs  evolutor.rs  general.rs  mod.rs  prompt_builder.rs  react_loop.rs  researcher.rs  reviewer.rs  router.rs  search_worker.rs  tester.rs
crates/telos_daemon/src/agents/bmad/: approval.rs  architect.rs  harness.rs  integration.rs  mod.rs  product.rs  scrum_master.rs  tech_lead.rs  worker.rs
crates/telos_daemon/src/api/: handlers.rs  mod.rs  models.rs  routes.rs  ws.rs
crates/telos_daemon/src/core/: adapters.rs  metrics.rs  metrics_store.rs  mod.rs  mutate_tool.rs  schedule_tools.rs  setup.rs  state.rs
crates/telos_daemon/src/graph/: factory.rs  mod.rs  nodes.rs
crates/telos_daemon/src/workers/: event_loop.rs  memory_sweeper.rs  mod.rs  scheduler.rs  spawner.rs  user_profile.rs
crates/telos_daemon/static/: index.html
crates/telos_dag/: Cargo.toml
crates/telos_dag/src/: checkpoint.rs  engine.rs  lib.rs  tests.rs
crates/telos_evolution/: Cargo.toml
crates/telos_evolution/src/: evaluator.rs  lib.rs
crates/telos_hci/: Cargo.toml
crates/telos_hci/src/: lib.rs
crates/telos_memory/: Cargo.toml
crates/telos_memory/src/: conflict.rs  decay.rs  engine.rs  integration.rs  lib.rs  profile.rs  reconsolidation.rs  tests.rs  types.rs
crates/telos_model_gateway/: Cargo.toml
crates/telos_model_gateway/src/: backoff.rs  gateway.rs  lib.rs  rate_limiter.rs
crates/telos_project/: Cargo.toml
crates/telos_project/src/: manager.rs
crates/telos_security/: Cargo.toml
crates/telos_security/src/: lib.rs  vault.rs
crates/telos_telemetry/: Cargo.toml
crates/telos_telemetry/src/: lib.rs
crates/telos_tooling/: Cargo.toml
crates/telos_tooling/src/: lib.rs  native.rs  retrieval.rs  sandbox.rs  script_sandbox.rs  tests.rs
crates/telos_tooling/src/native/: dev_tools.rs  fs_tools.rs  memory_tools.rs  mod.rs  os_tools.rs  project_tools.rs  web_tools.rs  web_tools_test.rs
crates/telos_web/: Cargo.toml
crates/telos_web/src/: lib.rs  metrics.rs
crates/telos_web/static/: index.html
crates/telos_web/static/js/: app.js
docs/: TROUBLESHOOTING.md  architecture_analysis.md  research.md
src/: event_bus.rs
tasks/: 00_architecture_tasks.md  01_hci_event_bus_tasks.md  02_dag_engine_tasks.md  03_context_compression_tasks.md  04_memory_os_tasks.md  05_tooling_mcp_tasks.md  06_evolution_tasks.md  07_model_gateway_tasks.md  08_security_vault_tasks.md  09_telemetry_tasks.md  10_integration_tasks.md  11_daemon_and_cli_tasks.md  12_bot_integration_tasks.md  13_project_management_tasks.md  14_telegram_voice_markdown.md  15_memory_optimization_procedural_intelligence.md  16_telemetry_dashboard.md  17_codebase_refactoring.md  18_workflow_evolution.md  19_tool_evolution.md  20_scheduled_tasks.md  21_memory_conflict_resolution.md  23_meta_driven_project_harness.md  24_engineering_closed_loop.md  25_hierarchical_escalation.md  26_feature_branch_escalation.md  27_e2e_difficulty_evaluation.md
