[workspace]
resolver = "2"
members = [
    "crates/*", "crates/telos_bot"
]

[workspace.dependencies]
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["full"] }
serde_json = "1.0"
petgraph = "0.6"
redb = "2.2.0"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
reqwest = { version = "0.13.2", default-features = true, features = ["json"] }
tracing = "0.1"
