[package]
name = "telos_context"
version = "0.1.0"
edition = "2021"

[features]
default = []
local-embeddings = ["fastembed"]

[dependencies]
async-trait.workspace = true
fastembed = { version = "5.12.0", optional = true }
reqwest = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json.workspace = true
telos_core = { path = "../telos_core" }
telos_model_gateway = { path = "../telos_model_gateway" }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

telos_memory = { path = "../telos_memory" }

[dev-dependencies]
wiremock = "0.6.5"
