[package]
name = "telos_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["toml", "dirs", "uuid_v4"]
uuid_v4 = ["uuid/v4"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true, optional = true, default-features = false }
dirs = { workspace = true, optional = true, default-features = false }
uuid = { version = "1.21.0", optional = true, default-features = false }
async-trait.workspace = true
