[package]
name = "telos_evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
telos_core = { path = "../telos_core" }
telos_model_gateway = { path = "../telos_model_gateway" }
fastembed = "5.12.0"
tokio.workspace = true
async-trait.workspace = true
serde_json.workspace = true
anyhow = "1.0"
