[package]
name = "telos_project"
version = "0.1.0"
edition = "2021"

[dependencies]
telos_core = { path = "../telos_core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
tokio = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
