[package]
name = "telos_security"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
casbin = "2.20.0"
chrono = "0.4.44"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
