[package]
name = "telos_telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
telos_evolution = { path = "../telos_evolution" }
telos_core = { path = "../telos_core" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.80"
[dev-dependencies]
tempfile = "3.10"
