[package]
name = "telos_tooling"
version = "0.1.0"
edition = "2021"

[features]
default = []
local-embeddings = ["fastembed"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
telos_core = { path = "../telos_core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
serde_json.workspace = true
wasmtime = "14.0"
fastembed = { version = "5.12.0", optional = true }
uuid.workspace = true
lru.workspace = true
anyhow = "1.0"
urlencoding = "2.1"

[dev-dependencies]
wat = "1.0"

