[package]
name = "telos_tooling"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["tokio", "anyhow", "urlencoding", "uuid_v4", "lru", "telos_core/full"]
uuid_v4 = ["uuid/v4"]
local-embeddings = ["fastembed", "full"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
telos_core = { path = "../telos_core", default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
async-trait.workspace = true
serde_json.workspace = true
fastembed = { version = "5.12.0", optional = true }
uuid = { version = "1.21.0", optional = true, default-features = false }
lru = { version = "0.16.3", optional = true, default-features = false }
anyhow = { version = "1.0", optional = true }
urlencoding = { version = "2.1", optional = true }
rhai = { version = "1.19", features = ["serde", "sync"] }
reqwest = { workspace = true }
chrono = "0.4.44"
scraper = "0.25.0"
tracing.workspace = true
dirs.workspace = true

[dev-dependencies]
wat = "1.0"

